--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "opusscript": "0.0.6",
     "system-sleep": "^1.3.6",
     "youtube-search": "^1.0.10",
-    "ytdl-core": "0.20.2"
+    "ytdl-core": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
