--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "discord_bot",
   "version": "1.0.0",
   "description": "A test discord bot for the nodejs class.",
-  "main": "bot.js",
+  "main": "newbot.js",
   "dependencies": {
-    "discord.js": "^11.5.1",
+    "@discordjs/opus": "^0.3.2",
+    "discord.js": "^12.2.0",
     "forever": "^0.15.3",
-    "npm": "^6.13.4",
-    "opusscript": "0.0.6",
+    "npm": "^6.14.5",
+    "opusscript": "0.0.7",
+    "snekfetch": "^4.0.4",
     "system-sleep": "^1.3.6",
     "youtube-search": "^1.1.4",
-    "ytdl-core": "^1.0.6"
+    "ytdl-core": "^2.1.5"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node newbot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bilbo Swaggins",
